# internal/models/employee.go
@@ -14,7 +14,7 @@ type Employee struct {
 	ID           int64     `json:"id" db:"id" gorm:"primaryKey;autoIncrement"`
 	FirstName    string    `json:"firstname" db:"firstname" gorm:"column:firstname;type:varchar(100);not null"`
 	LastName     string    `json:"lastname" db:"lastname" gorm:"column:lastname;type:varchar(100);not null"`
-	DepartmentID *int64    `json:"department_id" db:"department_id" gorm:"column:department_id"`
+	DepartmentID int64     `json:"department_id" db:"department_id" gorm:"column:department_id"`
 	CreatedAt    time.Time `json:"created_at" db:"created_at" gorm:"autoCreateTime"`
 	UpdatedAt    time.Time `json:"updated_at" db:"updated_at" gorm:"autoUpdateTime"`
 
